# pgfenicsx

./: .gitignore  README.md  enviroment.yml  environment-mkl.yml  environment.yml  pyproject.toml
.github/workflows/: docs.yml  pytests.yml
docs/: Makefile  environment-sphinx.yml  environment.yml
docs/source/: conf.py  index.rst  pgfenicsx.rst
examples/: dirichlet_problem.py  wave_equation.py
pgfenicsx/: __init__.py  _pgfenicsx.py
tests/: test_collect_dirichletbcs.py
